--- a/vježbe.html
+++ b/vježbe.html
@@ -39,10 +39,10 @@
     <nav>
 		<h1>Projektni zadatak</h1>
 		<ul>
-		    <li><a href="file:///C:/Users/Mario/Desktop/video%20dm/new%201.html">Početna</a></li>
-			<li><a href="file:///C:/Users/Mario/Desktop/video%20dm/o_meni.html">O meni</a></li>
-			<li><a href="file:///C:/Users/Mario/Desktop/video%20dm/vježbe.html">Vježbe</a></li>
-			<li><a href="file:///C:/Users/Mario/Desktop/video%20dm/video.html">Video</a></li>
+		    <li><a href="new 1.html">Početna</a></li>
+			<li><a href="o_meni.html">O meni</a></li>
+			<li><a href="vježbe.html">Vježbe</a></li>
+			<li><a href="video.html">Video</a></li>
 		</ul>
 	</nav>
    <h1>Vježbe</h1>
