--- a/new 1.html
+++ b/new 1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>About Me</title>
 	<style>
 		body {
@@ -39,7 +40,7 @@
 	<nav>
 		<h1>Projektni zadatak</h1>
 		<ul>
-		    <li><a href="new 1.html">Početna</a></li>
+		    <li><a href="new1.html">Početna</a></li>
 			<li><a href="o_meni.html">O meni</a></li>
 			<li><a href="vježbe.html">Vježbe</a></li>
 			<li><a href="video.html">Video</a></li>
@@ -49,9 +50,8 @@
 	<h2>Digitalni multimedij 1</h2>
 	<blockquote>Bok ja sam <b>Chiara</b>, rođena sam <i>4.8.2002.</i> u <i>Splitu</i>,<br/>
 	Dobro došli na moju stranicu koju sam napravila za <br/> 3. projektni zadatak predmeta Digitalni multimedij. <br/>
-	Na mojoj stranici možete pronači neke od mojih radova <br/> kroz protekli semestar i saznati nešto o meni.<br/>
-	
+	Na mojoj stranici možete pronaći neke od mojih radova <br/> kroz protekli semestar i saznati nešto o meni.<br/>
+	</blockquote>
 	<p>Nadam se da će vam se svidjeti. :)</p>
-	
 </body>
 </html>
