--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<nav>
 		<h1>Projektni zadatak</h1>
 		<ul>
-		    <li><a href="new1.html">Početna</a></li>
+		    <li><a href="index.html">Početna</a></li>
 			<li><a href="o_meni.html">O meni</a></li>
 			<li><a href="vježbe.html">Vježbe</a></li>
 			<li><a href="video.html">Video</a></li>
