--- a/video.html
+++ b/video.html
@@ -39,7 +39,7 @@
     <nav>
 		<h1>Projektni zadatak</h1>
 		<ul>
-		    <li><a href="new 1.html">Početna</a></li>
+		    <li><a href="index.html">Početna</a></li>
 			<li><a href="o_meni.html">O meni</a></li>
 			<li><a href="vježbe.html">Vježbe</a></li>
 			<li><a href="video.html">Video</a></li>
